feat: add projection type selection

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,17 @@
     <body>
         <div class="wrapper">
             <canvas id="canvas" width="720" height="720"></canvas>
-            <div id="properties"></div>
+            <div id="properties">
+                <div>
+                    <p>Projection Type</p>
+                    <select id="projection-type">
+                        <option value="perspective" selected>perspective</option>
+                        <option value="orthographic">orthographic</option>
+                        <option value="oblique">oblique</option>
+                    </select>
+                </div>
+
+            </div>
         </div>
     </body>
 </html>
