--- a/src/index.html
+++ b/src/index.html
@@ -35,14 +35,14 @@
         <div class="wrapper">
             <canvas id="canvas" width="720" height="720"></canvas>
             <div id="properties">
-                <div>
+                    <input type="checkbox" id="animation" name="animation" value="false">
+                    <label for="animation">Animation</label><br>
                     <p>Projection Type</p>
                     <select id="projection-type">
                         <option value="perspective" selected>perspective</option>
                         <option value="orthographic">orthographic</option>
                         <option value="oblique">oblique</option>
                     </select>
-                </div>
 
             </div>
         </div>
