feat: shading continued

--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,10 @@
                         <option value="oblique">oblique</option>
                     </select>
                 </div>
+                <div>
+                    <button id="save"> Save </button>
+                    <button id="load"> Load </button>
+                </div>
 
             </div>
         </div>
