fix: merge conflict in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,6 @@
                         <option value="oblique">oblique</option>
                     </select>
                 </div>
-                <button id="reset-view">Reset default view</button>
                 <div>
                     <input type="checkbox" id="animation" name="animation" value="false">
                     <label for="animation">Animation</label><br>
@@ -67,6 +66,9 @@
                 <div>
                     <button id="save"> Save </button>
                     <button id="load"> Load </button>
+                </div>
+                <div>
+                    <button id="reset-view">Reset default view</button>
                 </div>
                 <div>
                     <button id="manual">Manual</button>
