--- a/src/index.html
+++ b/src/index.html
@@ -9,32 +9,35 @@
     </head>
     <script id="vertex-shader" type="x-shader/x-vertex">
         attribute vec4 vPosition;
+        attribute vec4 vColor;
         attribute vec3 vNormal;
 
         uniform mat4 uWorld;
         uniform mat4 uWorldViewProjection;
 
+        varying vec4 fColor;
         varying vec3 fNormal;
 
         void main()
         {
             gl_Position = uWorldViewProjection * vPosition;
             fNormal = mat3(uWorld) * vNormal;
+            fColor = vColor;
         }
     </script>
     <script id="fragment-shader" type="x-shader/x-fragment">
         precision mediump float;
 
         varying vec3 fNormal;
+        varying vec4 fColor;
 
         uniform vec3 uReverseLightDirection;
-        uniform vec4 uColor;
 
         void main()
         {
             vec3 normal = normalize(fNormal);
             float light = dot(normal, uReverseLightDirection);
-            gl_FragColor = uColor;
+            gl_FragColor = fColor;
             gl_FragColor.rgb *= light;
         }
     </script>
