feat: save and load

--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
                 </div>
                 <div>
                     <button id="save"> Save </button>
-                    <button id="load"> Load </button>
+                    <input type="file" id="load"> Load </input>
                 </div>
                 <div>
                     <button id="reset-view">Reset default view</button>
