feat add manual modal content

--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,76 @@
             <div id="manual-modal" class="modal">
                 <div class="modal-content">
                   <span class="close">&times;</span>
-                  <p>Some text in the Modal..</p>
+                    <ul>
+                        <li>
+                            Penggantian Jenis Hollow Object
+                            <pre>
+                                1. Initial hollow object adalah cube
+                                2. Untuk mengganti objek, select jenis hollow object di toolbar “Shape”
+                            </pre>
+                        </li>
+                        <li>
+                            Penggantian Jenis Projection
+                            <pre>
+                                1. Initial projection adalah perspective
+                                2. Untuk mengganti jenis projection, select jenis projection di toolbar “Projection Type”
+                            </pre>
+                        </li>
+                        <li>
+                            Rotasi (x, y, z)
+                            <pre>
+                                1. Ubah nilai slider pada bagian angle x, angle y, atau angle z untuk rotasi pada sumbu x, y, atau z
+                            </pre>
+                        </li>
+                        <li>
+                            Translasi (x, y, z)
+                            <pre>
+                                1. Ubah nilai slider pada bagian translation x, translation y, atau translation z untuk translasi pada sumbu x, y, atau z
+                            </pre>
+                        </li>
+                        <li>
+                            Scaling (overall, x, y, z)
+                            <pre>
+                                1. Ubah nilai slider pada bagian scaling x, translation y ,atau translation z untuk scaling pada sumbu x, y, atau z
+                                2. Ubah nilai slider pada bagian scaling overall untuk scaling pada ketiga sumbu
+                            </pre>
+                        </li>
+                        <li>
+                            Pengaturan kamera
+                            <pre>
+                                1. Ubah nilai slider pada bagian cameraAngle dan cameraRadius
+                            </pre>
+                        </li>
+                        <li>
+                            Shading
+                            <pre>
+                                1. Untuk mengaktifkan shading, centang checkbox “Shading” pada toolbar
+                            </pre>
+                        </li>
+                        <li>
+                            Animation
+                            <pre>
+                                1. Untuk mengaktifkan animasi, centang checkbox “Animation” pada toolbar
+                            </pre>
+                        </li>
+                        <li>
+                            save
+                            <pre>
+                                1. Untuk menyimpan objek, klik tombol “Save”
+                            </pre>
+                        </li>
+                        <li>
+                            load
+                            <pre>
+                                1. Untuk memuat objek, klik tombol “Load”
+                            </pre>
+                        </li>
+                        <li>
+                            reset view
+                            <pre>
+                                1. Klik tombol “Reset default view”
+                            </pre>
+                    </ul>
                 </div>
               
               </div>
