feat: triangle-prism object

--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,7 @@
                     <select id="shape-type">
                         <option value="cube" selected>cube</option>
                         <option value="random">random</option>
+                        <option value="triangle-prism">triangle-prism</option>
                     </select>
                 </div> 
                 <div>
